--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.1",
+    "npm": "^6.1.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -14,6 +15,7 @@
     "redux": "^4.0.0",
     "redux-immutable-state-invariant": "^2.1.0",
     "save": "^2.3.2",
+    "update": "^0.7.4",
     "webpack": "^3.11.0"
   },
   "scripts": {
