--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "save": "^2.3.2",
+    "toastr": "^2.1.4",
     "update": "^0.7.4",
     "webpack": "^3.11.0"
   },
