--- a/my-app/package.json
+++ b/my-app/package.json
@@ -25,7 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "node_modules/.bin/esw webpack.config.* src tools"
+    "lint": "node_modules/.bin/esw webpack.config.* src tools",
+    "lint:Watch": "npm run lint -- --watch"
 
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
