--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
     "bootstrap": "^4.1.1",
+    "chai": "^4.1.2",
+    "expect": "^23.2.0",
+    "mocha": "^5.2.0",
     "npm": "^6.1.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
@@ -20,20 +25,26 @@
     "update": "^0.7.4",
     "webpack": "^3.11.0"
   },
+  "presets": [
+    "react",
+    "es2015",
+    "stage-0"
+  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
-    "lint:Watch": "npm run lint -- --watch"
-
+    "lint:Watch": "npm run lint -- --watch",
+    "test": "mocha --reporter spec tools/testSetup.js \"src/**/*.test.js\"",
+    "test-watch": "npm run test -- --watch"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebookincubator/create-react-app).",
   "main": "index.js",
   "devDependencies": {
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "webpack-dev-server": "^3.1.4"
   },
